@@ -136,7 +136,7 @@ curl=curl
 #*
 #*   --strict,
 #*   --no-ignore-unpaired-datablocks, --dont-ignore-unpaired-datablocks
-#*                     Stop the deposition if any CIF data block can not be
+#*                     Stop the deposition if any CIF data block cannot be
 #*                     paired to any Fobs data blocks (provided that any
 #*                     unpaired data blocks exist) (default).
 #*
