@@ -306,7 +306,7 @@ sub get_dict($$)
         my $values = $data_block->{values};
         if( exists $values->{'_dictionary.ddl_conformance'} &&
             $values->{'_dictionary.ddl_conformance'}[0] =~ /^3[.]/ ) {
-            warn 'dictionary is DDLm-compliant and can not be handled ' .
+            warn 'dictionary is DDLm-compliant and cannot be handled ' .
                  'in this version' . "\n";
         }
 
