@@ -1,7 +1,7 @@
 # Test case based on ic050050asi20050113_112336.cif
 # 
 # Multiplicity ratio 10 does not divide multiplicity of a general
-# position 36-- this can not be. at
+# position 36 -- this cannot be. at
 # /home/saulius/src/cif-tools/trunk/CIFData/CIFCellContents.pm line 317.
 
 data_mnncn 
