@@ -1,4 +1,4 @@
-scripts/cif_validate: tests/inputs/DDLm_3.11.09.dic: WARNING, dictionary is DDLm-compliant and can not be handled in this version.
+scripts/cif_validate: tests/inputs/DDLm_3.11.09.dic: WARNING, dictionary is DDLm-compliant and cannot be handled in this version.
 scripts/cif_validate: tests/inputs/DDLm_3.11.09.dic: WARNING, no data item definitions found.
 scripts/cif_validate:: ERROR, no data item definitions were found in the provided dictionary files ('tests/inputs/DDLm_3.11.09.dic').
 scripts/cif_validate:: ERROR, 1 ERROR(s) encountered -- die on ERROR(s) requested.
