@@ -17,7 +17,8 @@ cod-tools (unreleased)
       - standardising symmetry data item recognition.
     - cif_molecule, cif_p1, cif_reduce_Niggli and oqmd2cif:
       - adding '_space_group_name_*' to the output instead of deprecated
-        '_symmetry_space_group_name_*'.
+        '_symmetry_space_group_name_*';
+    - replaced 'can not' with 'cannot' in all affected scripts and modules.
 
 cod-tools (2.3)
 
